@@ -21,310 +21,327 @@ import org.eclipse.emf.ecore.impl.ENotificationImpl;
  * <!-- end-user-doc -->
  * <p>
  * The following features are implemented:
+ * </p>
  * <ul>
  *   <li>{@link org.eclipse.datatools.enablement.sybase.ase.models.sybaseasesqlmodel.impl.SybaseASEProcedureImpl#getGroupNumber <em>Group Number</em>}</li>
  *   <li>{@link org.eclipse.datatools.enablement.sybase.ase.models.sybaseasesqlmodel.impl.SybaseASEProcedureImpl#getTransactionMode <em>Transaction Mode</em>}</li>
  *   <li>{@link org.eclipse.datatools.enablement.sybase.ase.models.sybaseasesqlmodel.impl.SybaseASEProcedureImpl#isSystemProcedure <em>System Procedure</em>}</li>
  *   <li>{@link org.eclipse.datatools.enablement.sybase.ase.models.sybaseasesqlmodel.impl.SybaseASEProcedureImpl#isWithRecompile <em>With Recompile</em>}</li>
  * </ul>
- * </p>
  *
  * @generated
  */
-public class SybaseASEProcedureImpl extends ProcedureImpl implements SybaseASEProcedure 
+public class SybaseASEProcedureImpl extends ProcedureImpl implements SybaseASEProcedure
 {
 	/**
-     * The default value of the '{@link #getGroupNumber() <em>Group Number</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The default value of the '{@link #getGroupNumber() <em>Group Number</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #getGroupNumber()
-     * @generated
-     * @ordered
-     */
+	 * @see #getGroupNumber()
+	 * @generated
+	 * @ordered
+	 */
 	protected static final int GROUP_NUMBER_EDEFAULT = -1;
 
 	/**
-     * The cached value of the '{@link #getGroupNumber() <em>Group Number</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The cached value of the '{@link #getGroupNumber() <em>Group Number</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #getGroupNumber()
-     * @generated
-     * @ordered
-     */
+	 * @see #getGroupNumber()
+	 * @generated
+	 * @ordered
+	 */
 	protected int groupNumber = GROUP_NUMBER_EDEFAULT;
 
 	/**
-     * The default value of the '{@link #getTransactionMode() <em>Transaction Mode</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The default value of the '{@link #getTransactionMode() <em>Transaction Mode</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #getTransactionMode()
-     * @generated
-     * @ordered
-     */
+	 * @see #getTransactionMode()
+	 * @generated
+	 * @ordered
+	 */
 	protected static final TransactionModeType TRANSACTION_MODE_EDEFAULT = TransactionModeType.CHAINED_LITERAL;
 
 	/**
-     * The cached value of the '{@link #getTransactionMode() <em>Transaction Mode</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The cached value of the '{@link #getTransactionMode() <em>Transaction Mode</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #getTransactionMode()
-     * @generated
-     * @ordered
-     */
+	 * @see #getTransactionMode()
+	 * @generated
+	 * @ordered
+	 */
 	protected TransactionModeType transactionMode = TRANSACTION_MODE_EDEFAULT;
 
 	/**
-     * The default value of the '{@link #isSystemProcedure() <em>System Procedure</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The default value of the '{@link #isSystemProcedure() <em>System Procedure</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #isSystemProcedure()
-     * @generated
-     * @ordered
-     */
+	 * @see #isSystemProcedure()
+	 * @generated
+	 * @ordered
+	 */
 	protected static final boolean SYSTEM_PROCEDURE_EDEFAULT = false;
 
 	/**
-     * The cached value of the '{@link #isSystemProcedure() <em>System Procedure</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The cached value of the '{@link #isSystemProcedure() <em>System Procedure</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #isSystemProcedure()
-     * @generated
-     * @ordered
-     */
+	 * @see #isSystemProcedure()
+	 * @generated
+	 * @ordered
+	 */
 	protected boolean systemProcedure = SYSTEM_PROCEDURE_EDEFAULT;
 
 	/**
-     * The default value of the '{@link #isWithRecompile() <em>With Recompile</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The default value of the '{@link #isWithRecompile() <em>With Recompile</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #isWithRecompile()
-     * @generated
-     * @ordered
-     */
+	 * @see #isWithRecompile()
+	 * @generated
+	 * @ordered
+	 */
 	protected static final boolean WITH_RECOMPILE_EDEFAULT = false;
 
 	/**
-     * The cached value of the '{@link #isWithRecompile() <em>With Recompile</em>}' attribute.
-     * <!-- begin-user-doc -->
+	 * The cached value of the '{@link #isWithRecompile() <em>With Recompile</em>}' attribute.
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @see #isWithRecompile()
-     * @generated
-     * @ordered
-     */
+	 * @see #isWithRecompile()
+	 * @generated
+	 * @ordered
+	 */
 	protected boolean withRecompile = WITH_RECOMPILE_EDEFAULT;
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
 	protected SybaseASEProcedureImpl() {
-        super();
-    }
+		super();
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	protected EClass eStaticClass() {
-        return SybaseasesqlmodelPackage.Literals.SYBASE_ASE_PROCEDURE;
-    }
+		return SybaseasesqlmodelPackage.Literals.SYBASE_ASE_PROCEDURE;
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public int getGroupNumber() {
-        return groupNumber;
-    }
+		return groupNumber;
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public void setGroupNumber(int newGroupNumber) {
-        int oldGroupNumber = groupNumber;
-        groupNumber = newGroupNumber;
-        if (eNotificationRequired())
-            eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER, oldGroupNumber, groupNumber));
-    }
+		int oldGroupNumber = groupNumber;
+		groupNumber = newGroupNumber;
+		if (eNotificationRequired()) {
+			eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER, oldGroupNumber, groupNumber));
+		}
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public TransactionModeType getTransactionMode() {
-        return transactionMode;
-    }
+		return transactionMode;
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public void setTransactionMode(TransactionModeType newTransactionMode) {
-        TransactionModeType oldTransactionMode = transactionMode;
-        transactionMode = newTransactionMode == null ? TRANSACTION_MODE_EDEFAULT : newTransactionMode;
-        if (eNotificationRequired())
-            eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE, oldTransactionMode, transactionMode));
-    }
+		TransactionModeType oldTransactionMode = transactionMode;
+		transactionMode = newTransactionMode == null ? TRANSACTION_MODE_EDEFAULT : newTransactionMode;
+		if (eNotificationRequired()) {
+			eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE, oldTransactionMode, transactionMode));
+		}
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public boolean isSystemProcedure() {
-        return systemProcedure;
-    }
+		return systemProcedure;
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public void setSystemProcedure(boolean newSystemProcedure) {
-        boolean oldSystemProcedure = systemProcedure;
-        systemProcedure = newSystemProcedure;
-        if (eNotificationRequired())
-            eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE, oldSystemProcedure, systemProcedure));
-    }
+		boolean oldSystemProcedure = systemProcedure;
+		systemProcedure = newSystemProcedure;
+		if (eNotificationRequired()) {
+			eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE, oldSystemProcedure, systemProcedure));
+		}
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public boolean isWithRecompile() {
-        return withRecompile;
-    }
+		return withRecompile;
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public void setWithRecompile(boolean newWithRecompile) {
-        boolean oldWithRecompile = withRecompile;
-        withRecompile = newWithRecompile;
-        if (eNotificationRequired())
-            eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE, oldWithRecompile, withRecompile));
-    }
+		boolean oldWithRecompile = withRecompile;
+		withRecompile = newWithRecompile;
+		if (eNotificationRequired()) {
+			eNotify(new ENotificationImpl(this, Notification.SET, SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE, oldWithRecompile, withRecompile));
+		}
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public Object eGet(int featureID, boolean resolve, boolean coreType) {
-        switch (featureID)
-        {
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
-                return Integer.valueOf(getGroupNumber());
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
-                return getTransactionMode();
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
-                return isSystemProcedure() ? Boolean.TRUE : Boolean.FALSE;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
-                return isWithRecompile() ? Boolean.TRUE : Boolean.FALSE;
-        }
-        return super.eGet(featureID, resolve, coreType);
-    }
+		switch (featureID) {
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
+				return new Integer(getGroupNumber());
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
+				return getTransactionMode();
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
+				return isSystemProcedure() ? Boolean.TRUE : Boolean.FALSE;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
+				return isWithRecompile() ? Boolean.TRUE : Boolean.FALSE;
+		}
+		return super.eGet(featureID, resolve, coreType);
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public void eSet(int featureID, Object newValue) {
-        switch (featureID)
-        {
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
-                setGroupNumber(((Integer)newValue).intValue());
-                return;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
-                setTransactionMode((TransactionModeType)newValue);
-                return;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
-                setSystemProcedure(((Boolean)newValue).booleanValue());
-                return;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
-                setWithRecompile(((Boolean)newValue).booleanValue());
-                return;
-        }
-        super.eSet(featureID, newValue);
-    }
+		switch (featureID) {
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
+				setGroupNumber(((Integer)newValue).intValue());
+				return;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
+				setTransactionMode((TransactionModeType)newValue);
+				return;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
+				setSystemProcedure(((Boolean)newValue).booleanValue());
+				return;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
+				setWithRecompile(((Boolean)newValue).booleanValue());
+				return;
+		}
+		super.eSet(featureID, newValue);
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public void eUnset(int featureID) {
-        switch (featureID)
-        {
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
-                setGroupNumber(GROUP_NUMBER_EDEFAULT);
-                return;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
-                setTransactionMode(TRANSACTION_MODE_EDEFAULT);
-                return;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
-                setSystemProcedure(SYSTEM_PROCEDURE_EDEFAULT);
-                return;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
-                setWithRecompile(WITH_RECOMPILE_EDEFAULT);
-                return;
-        }
-        super.eUnset(featureID);
-    }
+		switch (featureID) {
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
+				setGroupNumber(GROUP_NUMBER_EDEFAULT);
+				return;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
+				setTransactionMode(TRANSACTION_MODE_EDEFAULT);
+				return;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
+				setSystemProcedure(SYSTEM_PROCEDURE_EDEFAULT);
+				return;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
+				setWithRecompile(WITH_RECOMPILE_EDEFAULT);
+				return;
+		}
+		super.eUnset(featureID);
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public boolean eIsSet(int featureID) {
-        switch (featureID)
-        {
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
-                return groupNumber != GROUP_NUMBER_EDEFAULT;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
-                return transactionMode != TRANSACTION_MODE_EDEFAULT;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
-                return systemProcedure != SYSTEM_PROCEDURE_EDEFAULT;
-            case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
-                return withRecompile != WITH_RECOMPILE_EDEFAULT;
-        }
-        return super.eIsSet(featureID);
-    }
+		switch (featureID) {
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__GROUP_NUMBER:
+				return groupNumber != GROUP_NUMBER_EDEFAULT;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__TRANSACTION_MODE:
+				return transactionMode != TRANSACTION_MODE_EDEFAULT;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__SYSTEM_PROCEDURE:
+				return systemProcedure != SYSTEM_PROCEDURE_EDEFAULT;
+			case SybaseasesqlmodelPackage.SYBASE_ASE_PROCEDURE__WITH_RECOMPILE:
+				return withRecompile != WITH_RECOMPILE_EDEFAULT;
+		}
+		return super.eIsSet(featureID);
+	}
 
 	/**
-     * <!-- begin-user-doc -->
+	 * <!-- begin-user-doc -->
 	 * <!-- end-user-doc -->
-     * @generated
-     */
+	 * @generated
+	 */
+	@Override
 	public String toString() {
-        if (eIsProxy()) return super.toString();
+		if (eIsProxy()) {
+			return super.toString();
+		}
 
-        StringBuffer result = new StringBuffer(super.toString());
-        result.append(" (groupNumber: "); //$NON-NLS-1$
-        result.append(groupNumber);
-        result.append(", transactionMode: "); //$NON-NLS-1$
-        result.append(transactionMode);
-        result.append(", systemProcedure: "); //$NON-NLS-1$
-        result.append(systemProcedure);
-        result.append(", withRecompile: "); //$NON-NLS-1$
-        result.append(withRecompile);
-        result.append(')');
-        return result.toString();
-    }
+		StringBuffer result = new StringBuffer(super.toString());
+		result.append(" (groupNumber: "); //$NON-NLS-1$
+		result.append(groupNumber);
+		result.append(", transactionMode: "); //$NON-NLS-1$
+		result.append(transactionMode);
+		result.append(", systemProcedure: "); //$NON-NLS-1$
+		result.append(systemProcedure);
+		result.append(", withRecompile: "); //$NON-NLS-1$
+		result.append(withRecompile);
+		result.append(')');
+		return result.toString();
+	}
 
-    public  void parseParameterDefaultValues()
+    @Override
+	public  void parseParameterDefaultValues()
     {
         SybaseRoutineUtil.parseParameterDefaultValues(this, parameters);
     }
@@ -334,7 +351,8 @@ public class SybaseASEProcedureImpl extends ProcedureImpl implements SybaseASEPr
      * <!-- end-user-doc -->
      * @generated NOT
      */
-    public boolean isSystem()
+    @Override
+	public boolean isSystem()
     {
         return isSystemProcedure();
     }
