@@ -4,7 +4,7 @@
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * https://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
@@ -22,10 +22,10 @@ import org.eclipse.emf.ecore.impl.ENotificationImpl;
  * <!-- end-user-doc -->
  * <p>
  * The following features are implemented:
+ * </p>
  * <ul>
  *   <li>{@link org.eclipse.datatools.modelbase.sql.datatypes.impl.BinaryStringDataTypeImpl#getLength <em>Length</em>}</li>
  * </ul>
- * </p>
  *
  * @generated
  */
@@ -64,6 +64,7 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	protected EClass eStaticClass() {
 		return SQLDataTypesPackage.Literals.BINARY_STRING_DATA_TYPE;
 	}
@@ -73,6 +74,7 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public int getLength() {
 		return length;
 	}
@@ -82,11 +84,13 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void setLength(int newLength) {
 		int oldLength = length;
 		length = newLength;
-		if (eNotificationRequired())
+		if (eNotificationRequired()) {
 			eNotify(new ENotificationImpl(this, Notification.SET, SQLDataTypesPackage.BINARY_STRING_DATA_TYPE__LENGTH, oldLength, length));
+		}
 	}
 
 	/**
@@ -94,6 +98,7 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public boolean equals() {
 		// TODO: implement this method
 		// Ensure that you remove @generated or mark it @generated NOT
@@ -105,10 +110,11 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public Object eGet(int featureID, boolean resolve, boolean coreType) {
 		switch (featureID) {
 			case SQLDataTypesPackage.BINARY_STRING_DATA_TYPE__LENGTH:
-				return Integer.valueOf(getLength());
+				return new Integer(getLength());
 		}
 		return super.eGet(featureID, resolve, coreType);
 	}
@@ -118,6 +124,7 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void eSet(int featureID, Object newValue) {
 		switch (featureID) {
 			case SQLDataTypesPackage.BINARY_STRING_DATA_TYPE__LENGTH:
@@ -132,6 +139,7 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public void eUnset(int featureID) {
 		switch (featureID) {
 			case SQLDataTypesPackage.BINARY_STRING_DATA_TYPE__LENGTH:
@@ -146,6 +154,7 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public boolean eIsSet(int featureID) {
 		switch (featureID) {
 			case SQLDataTypesPackage.BINARY_STRING_DATA_TYPE__LENGTH:
@@ -159,8 +168,11 @@ public class BinaryStringDataTypeImpl extends PredefinedDataTypeImpl implements 
 	 * <!-- end-user-doc -->
 	 * @generated
 	 */
+	@Override
 	public String toString() {
-		if (eIsProxy()) return super.toString();
+		if (eIsProxy()) {
+			return super.toString();
+		}
 
 		StringBuffer result = new StringBuffer(super.toString());
 		result.append(" (length: "); //$NON-NLS-1$
